--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,13 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    //Retrofit is used for network requests
     compile 'com.squareup.retrofit2:retrofit:2.4.0'
+    //OkHttp allows us to create interceptors for the requests
     compile 'com.squareup.okhttp3:okhttp:3.10.0'
-    compile 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
+    //Using the GSON converter factory to convert JSON to POJOs
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.4'
+    //Common-Lang3 is used for toString of POJOs
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
+
 }
