--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.10.0'
     //Using the GSON converter factory to convert JSON to POJOs
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.4'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     //Common-Lang3 is used for toString of POJOs
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
 
