closes webpage after login and shows simple list view

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+
     //Retrofit is used for network requests
     compile 'com.squareup.retrofit2:retrofit:2.4.0'
     //OkHttp allows us to create interceptors for the requests
