--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,28 +16,30 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '26.0.2'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-
     //Retrofit is used for network requests
     compile 'com.squareup.retrofit2:retrofit:2.4.0'
     //OkHttp allows us to create interceptors for the requests
     compile 'com.squareup.okhttp3:okhttp:3.10.0'
     //Using the GSON converter factory to convert JSON to POJOs
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.4'
+    compile 'com.google.code.gson:gson:2.8.4'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     //Common-Lang3 is used for toString of POJOs
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
-
+    compile 'org.apache.commons:commons-lang3:3.6'
 }
