reversed order of display terms and some refactoring

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".AllSitesActivity" />
-        <activity android:name=".SiteCollectionActivity"></activity>
+        <activity android:name=".SitePagesActivity"></activity>
     </application>
 
 </manifest>
