--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
         </activity>
         <activity android:name=".AllSitesActivity" />
         <activity android:name=".SitePagesActivity" />
+        <activity
+            android:name=".NavActivity"
+            android:label="@string/title_activity_nav"></activity>
     </application>
 
 </manifest>
