--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,11 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AllSitesActivity" />
         <activity android:name=".SitePagesActivity" />
         <activity
             android:name=".NavActivity"
-            android:label="@string/title_activity_nav"></activity>
+            android:label="@string/app_name">
+
+        </activity>
     </application>
 
 </manifest>
