--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name" />
-        <activity android:name=".TestActivity">
+            android:label="@string/app_name"></activity>
+        <activity android:name=".WebViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -26,7 +26,6 @@
         <activity
             android:name=".NavActivity"
             android:label="@string/app_name"></activity>
-        <activity android:name=".WebViewActivity"></activity>
     </application>
 
 </manifest>
