--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,15 +17,19 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"></activity>
+
+        <activity
+            android:name=".NavActivity"
+            android:label="@string/app_name">
+
+        </activity>
+
         <activity android:name=".WebViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".NavActivity"
-            android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
