Fixed attachment downloads crashing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         <!-- Provider for managing downloaded files -->
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="${applicationId}.fileprovider"
+            android:authorities="com.example.development.sakaiclientandroid.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
