--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,8 @@ dependencies {
     implementation "android.arch.persistence.room:rxjava2:$room_version"
     // Test helpers for Room
     testImplementation "android.arch.persistence.room:testing:$room_version"
+
+    def lifecycle_version = "1.1.1"
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    implementation "android.arch.lifecycle:viewmodel:$lifecycle_version"
 }
