--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,20 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 //noinspection GradleDependency
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 
 apply plugin: 'kotlin-android'
 
@@ -97,4 +112,5 @@ dependencies {
 
     // Test helpers for Room
     testImplementation "android.arch.persistence.room:testing:$room_version"
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.7'
 }
