--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
     }
     compileSdkVersion 26
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "com.sakaimobile.development.sakaiclient20"
         minSdkVersion 16
         targetSdkVersion 26
@@ -79,7 +80,7 @@ dependencies {
     implementation "android.arch.lifecycle:viewmodel:$lifecycle_version"
 
     // Dependency injection with Dagger
-    def dagger_version = "2.11"
+    def dagger_version = "2.15"
     implementation "com.google.dagger:dagger:$dagger_version"
     annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
 
