--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,11 @@
             android:value="ebf2c3e22b5ce9abda48ea296c12d2aebaf2b1c8" />
 
         <activity android:name=".ui.activities.SiteResourcesActivity" />
-        <activity android:name=".ui.activities.BaseObservingActivity"></activity>
+        <activity android:name=".ui.activities.BaseObservingActivity" />
+        <activity
+            android:name=".ui.activities.SiteAnnouncementActivity"
+            android:label="@string/title_activity_site_announcement"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
