--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.sakaimobile.development.sakaiclient20">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,7 +14,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".ui.activities.MainActivity" />
         <activity android:name=".ui.activities.WebViewActivity">
             <intent-filter>
@@ -23,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activities.SettingsActivity" />
+
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -43,7 +46,7 @@
         <activity
             android:name=".ui.activities.SiteAnnouncementActivity"
             android:label="@string/title_activity_site_announcement"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme"/>
     </application>
 
 </manifest>
