created seperate activity for sitegrades

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,6 @@
         </activity>
         <activity android:name=".ui.activities.SettingsActivity" />
 
-
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.sakaimobile.development.sakaiclientandroid.fileprovider"
@@ -42,11 +41,11 @@
             android:value="ebf2c3e22b5ce9abda48ea296c12d2aebaf2b1c8" />
 
         <activity android:name=".ui.activities.SiteResourcesActivity" />
-        <activity android:name=".ui.activities.BaseObservingActivity" />
         <activity
             android:name=".ui.activities.SiteAnnouncementActivity"
             android:label="@string/title_activity_site_announcement"
-            android:theme="@style/AppTheme"/>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".ui.activities.SiteGradesActivity"></activity>
     </application>
 
 </manifest>
