--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,12 @@ android {
             storePassword 'MasahiroSakurai123'
         }
     }
-    compileSdkVersion 26
+    compileSdkVersion 28
     defaultConfig {
         vectorDrawables.useSupportLibrary = true
         applicationId "com.sakaimobile.development.sakaiclient20"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 4
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -66,14 +66,15 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     // UI libraries/SDKs
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:preference-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
+    def support_lib_version = "28.0.0"
+    implementation "com.android.support:appcompat-v7:$support_lib_version"
+    implementation "com.android.support:preference-v7:$support_lib_version"
+    implementation "com.android.support:design:$support_lib_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:support-vector-drawable:26.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
-    implementation 'com.android.support:support-v4:26.1.0'
+    implementation "com.android.support:support-vector-drawable:$support_lib_version"
+    implementation "com.android.support:recyclerview-v7:$support_lib_version"
+    implementation "com.android.support:cardview-v7:$support_lib_version"
+    implementation "com.android.support:support-v4:$support_lib_version"
 
     // ViewModel/LiveData dependencies
     def lifecycle_version = "1.1.1"
