--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,11 +117,15 @@ dependencies {
     def room_version = "1.1.1"
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
-
-    // optional - RxJava support for Room
+    // RxJava support for Room
     implementation "android.arch.persistence.room:rxjava2:$room_version"
-
     // Test helpers for Room
     testImplementation "android.arch.persistence.room:testing:$room_version"
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.7'
+
+    def work_version = "1.0.0-beta01"
+    implementation "android.arch.work:work-runtime:$work_version"
+    // optional - Test helpers
+    androidTestImplementation "android.arch.work:work-testing:$work_version"
+
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
 }
