--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,4 +128,9 @@ dependencies {
     androidTestImplementation "android.arch.work:work-testing:$work_version"
 
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
+
+    // LeakCanary for memory leak detection
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.3'
 }
