--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        >
+        android:theme="@style/AppTheme">
+        <activity android:name=".ui.activities.CreditsActivity"></activity>
         <activity android:name=".ui.activities.MainActivity" />
         <activity android:name=".ui.activities.WebViewActivity">
             <intent-filter>
@@ -38,7 +38,7 @@
             android:name="io.fabric.ApiKey"
             android:value="ebf2c3e22b5ce9abda48ea296c12d2aebaf2b1c8" />
 
-        <activity android:name=".ui.activities.SitePageActivity"></activity>
+        <activity android:name=".ui.activities.SitePageActivity" />
     </application>
 
 </manifest>
