--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,7 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+SAKAI_CLIENT_STORE_PASSWORD=MasahiroSakurai123
+SAKAI_CLIENT_KEY_PASSWORD=masahirosakurai
+SAKAI_CLIENT_FABRIC_API_KEY=ebf2c3e22b5ce9abda48ea296c12d2aebaf2b1c8
