--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
 
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="ebf2c3e22b5ce9abda48ea296c12d2aebaf2b1c8" />
+            android:value="${fabric_io_id}" />
 
     </application>
 
