--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,13 +60,13 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     // UI libraries/SDKs
     def support_lib_version = "28.0.0"
+    implementation "com.android.support:support-v4:$support_lib_version"
     implementation "com.android.support:appcompat-v7:$support_lib_version"
     implementation "com.android.support:preference-v7:$support_lib_version"
     implementation "com.android.support:design:$support_lib_version"
