--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,6 +129,7 @@ dependencies {
 
     // Crashlytics for crash/error reporting
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
 
     // LeakCanary for memory leak detection
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
