Creating loading page, updated refresh semantics

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".ui.activities.CreditsActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".ui.fragments.LoadingActivity"
+            android:screenOrientation="portrait"/>
 
         <provider
             android:name="android.support.v4.content.FileProvider"
