--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:name=".ui.SakaiApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
+        android:label="@string/app_name"
+        android:supportsRtl="false"
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.activities.LoginActivity"
@@ -30,7 +30,7 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".ui.activities.CreditsActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name=".ui.fragments.LoadingActivity"
+        <activity android:name=".ui.activities.LoadingActivity"
             android:screenOrientation="portrait"/>
 
         <provider
