Updated build configuration to work with Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,9 @@ android:
     # - sys-img-x86-android-28
     # - sys-img-armeabi-v7a-android-17
 
+before_install:
+  - openssl aes-256-cbc -K $encrypted_d759740674f7_key -iv $encrypted_d759740674f7_iv -in keystore.enc -out keystore -d
+
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
