--- a/.travis.yml
+++ b/.travis.yml
@@ -31,3 +31,6 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
