--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,12 @@
 buildscript {
     repositories {
+        jcenter()
         maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
         classpath 'io.fabric.tools:gradle:1.27.0'
+        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.1'
     }
 }
 
@@ -13,9 +15,10 @@ apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'jacoco-android'
 
-repositories {
-    maven { url 'https://maven.fabric.io/public' }
+jacoco {
+    toolVersion = "0.8.2"
 }
 
 android {
@@ -34,6 +37,7 @@ android {
         targetSdkVersion 28
         versionCode 8
         versionName "1.1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
@@ -44,6 +48,9 @@ android {
         manifestPlaceholders = [fabric_io_id: System.getenv('SAKAI_MOBILE_FABRIC_API_KEY')]
     }
     buildTypes {
+        debug {
+            testCoverageEnabled true
+        }
         release {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
