--- a/.travis.yml
+++ b/.travis.yml
@@ -3,26 +3,20 @@ android:
   components:
     - tools
     - platform-tools
-
     # The BuildTools version used by the project
     - build-tools-28.0.3
-
     # The SDK version used to compile the project
     - android-28
-
     # Additional components
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
-
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
     # - sys-img-x86-android-28
     # - sys-img-armeabi-v7a-android-17
-
 before_install:
   - openssl aes-256-cbc -K $encrypted_d759740674f7_key -iv $encrypted_d759740674f7_iv -in keystore.enc -out keystore -d
-
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
@@ -31,6 +25,8 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
-
+script:
+  - ./gradlew build jacocoTestReport
+  - ./gradlew connectedCheck
 after_success:
   - bash <(curl -s https://codecov.io/bash)
