Waiting for login page to load before performing auto-login

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,10 @@ repositories {
 android {
     signingConfigs {
         config {
-            storeFile file('/Users/shoumyo/Documents/StudioProjects/keystore')
-            storePassword SAKAI_CLIENT_STORE_PASSWORD
+            storeFile file(System.getenv('SAKAI_MOBILE_STORE_PATH'))
+            storePassword System.getenv('SAKAI_MOBILE_STORE_PASSWORD')
             keyAlias 'key0'
-            keyPassword SAKAI_CLIENT_KEY_PASSWORD
+            keyPassword System.getenv('SAKAI_MOBILE_KEY_PASSWORD')
         }
     }
     compileSdkVersion 28
@@ -41,9 +41,14 @@ android {
             }
         }
         vectorDrawables.useSupportLibrary = true
-        manifestPlaceholders = [fabric_io_id: SAKAI_CLIENT_FABRIC_API_KEY]
+        manifestPlaceholders = [fabric_io_id: System.getenv('SAKAI_MOBILE_FABRIC_API_KEY')]
     }
     buildTypes {
+        // The debug build output must also be signed for Smart Lock to work.
+        // Otherwise the CredentialRequest returns an INTERNAL_ERROR status code.
+        debug {
+            signingConfig signingConfigs.config
+        }
         release {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
