--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:screenOrientation="portrait"/>
 
         <provider
-            android:name="android.support.v4.content.FileProvider"
+            android:name="androidx.core.content.FileProvider"
             android:authorities="com.sakaimobile.development.sakaiclientandroid.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
