--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
         applicationId "com.sakaimobile.development.sakaiclient20"
         minSdkVersion 16
         targetSdkVersion 28
+        multiDexEnabled true
         versionCode 8
         versionName "1.1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -50,6 +51,7 @@ android {
             signingConfig signingConfigs.config
         }
         release {
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
         }
@@ -68,9 +70,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    // MultiDex overcomes the 64K references limitation
+    implementation 'com.android.support:multidex:1.0.3'
 
     // UI libraries/SDKs
-    def support_lib_version = "28.0.0"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.preference:preference:1.0.0'
@@ -82,9 +85,9 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // ViewModel/LiveData dependencies
-    def lifecycle_version = "1.1.1"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.0.0'
+    def lifecycle_version = "2.0.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
 
     // Dependency injection with Dagger
     def dagger_version = '2.24'
@@ -116,18 +119,18 @@ dependencies {
     api 'com.github.bmelnychuk:atv:1.2.9'
 
     // Room local database
-    def room_version = "1.1.1"
-    implementation 'androidx.room:room-runtime:2.1.0'
-    annotationProcessor 'androidx.room:room-compiler:2.1.0'
+    def room_version = "2.1.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
     // RxJava support for Room
     implementation 'androidx.room:room-rxjava2:2.1.0'
     // Test helpers for Room
     testImplementation 'androidx.room:room-testing:2.1.0'
 
-    def work_version = "1.0.1"
-    implementation 'androidx.work:work-runtime:2.2.0'
+    def work_version = "2.2.0"
+    implementation "androidx.work:work-runtime:$work_version"
     // optional - Test helpers
-    androidTestImplementation 'androidx.work:work-testing:2.2.0'
+    androidTestImplementation "androidx.work:work-testing:$work_version"
 
     // Crashlytics for crash/error reporting
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
